--- a/WeatherAPP/Base.lproj/Main.storyboard
+++ b/WeatherAPP/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22089"/>
+        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,13 +23,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Loading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPc-8e-Jgm">
                                 <rect key="frame" x="164" y="76" width="213" height="100"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 °C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2T-ee-iUS">
                                 <rect key="frame" x="178" y="151" width="185" height="43"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="powersleep" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="quO-n7-NcE">
@@ -57,13 +58,42 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fe-Bc-PNS">
+                                <rect key="frame" x="5" y="224" width="383" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XPP-4a-lij">
+                                <rect key="frame" x="0.0" y="436" width="401" height="416"/>
+                                <subviews>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4mu-lE-Cyl">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="416"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="393" id="J6s-rh-QE1"/>
+                                        </constraints>
+                                        <hybridMapConfiguration key="preferredConfiguration" elevationStyle="realistic"/>
+                                    </mapView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="4mu-lE-Cyl" firstAttribute="trailing" secondItem="XPP-4a-lij" secondAttribute="trailingMargin" id="3Cb-fr-AxH"/>
+                                    <constraint firstItem="4mu-lE-Cyl" firstAttribute="top" secondItem="XPP-4a-lij" secondAttribute="top" id="8YI-Gd-6uK"/>
+                                    <constraint firstItem="4mu-lE-Cyl" firstAttribute="centerY" secondItem="XPP-4a-lij" secondAttribute="centerY" id="B8J-2f-WIx"/>
+                                    <constraint firstItem="4mu-lE-Cyl" firstAttribute="leading" secondItem="XPP-4a-lij" secondAttribute="leading" id="KoW-Ia-jnE"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="quO-n7-NcE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="43.000000000000014" id="0e1-QG-czs"/>
+                            <constraint firstItem="5fe-Bc-PNS" firstAttribute="top" secondItem="s1X-sD-8hm" secondAttribute="bottom" constant="-85" id="1BE-OL-cWU"/>
                             <constraint firstItem="KYS-IJ-k4J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3uF-Rj-a8R"/>
+                            <constraint firstItem="XPP-4a-lij" firstAttribute="centerX" secondItem="s1X-sD-8hm" secondAttribute="centerX" id="4Vv-V5-AK3"/>
                             <constraint firstItem="g2T-ee-iUS" firstAttribute="trailing" secondItem="s1X-sD-8hm" secondAttribute="trailing" id="5Zu-Po-UFk"/>
+                            <constraint firstItem="XPP-4a-lij" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="436" id="9tK-rB-MJL"/>
+                            <constraint firstItem="XPP-4a-lij" firstAttribute="leading" secondItem="KYS-IJ-k4J" secondAttribute="leading" id="C2J-ne-aWZ"/>
                             <constraint firstItem="rPc-8e-Jgm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="17" id="Wv5-Ew-Vfq"/>
                             <constraint firstItem="quO-n7-NcE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="YgM-rf-BPu"/>
                             <constraint firstItem="KYS-IJ-k4J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YvF-1o-sxc"/>
@@ -77,19 +107,25 @@
                             <constraint firstItem="g2T-ee-iUS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="92" id="nnP-3b-O03"/>
                             <constraint firstItem="s1X-sD-8hm" firstAttribute="top" secondItem="quO-n7-NcE" secondAttribute="bottom" constant="66" id="oGx-I4-pcI"/>
                             <constraint firstItem="g2T-ee-iUS" firstAttribute="leading" secondItem="quO-n7-NcE" secondAttribute="trailing" constant="22" id="ofL-r8-jff"/>
+                            <constraint firstItem="5fe-Bc-PNS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="pMK-rA-sjm"/>
+                            <constraint firstItem="XPP-4a-lij" firstAttribute="bottom" secondItem="KYS-IJ-k4J" secondAttribute="bottom" id="pvO-xc-vml"/>
                             <constraint firstItem="s1X-sD-8hm" firstAttribute="top" secondItem="Tvk-x9-q7J" secondAttribute="bottom" constant="59" id="q6G-pD-RVi"/>
                             <constraint firstItem="Tvk-x9-q7J" firstAttribute="top" secondItem="rPc-8e-Jgm" secondAttribute="bottom" constant="19" id="scZ-XU-3at"/>
                             <constraint firstItem="rPc-8e-Jgm" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="tYX-RM-Uas"/>
                             <constraint firstItem="KYS-IJ-k4J" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="w4V-pu-g3c"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="s1X-sD-8hm" secondAttribute="bottom" constant="509" id="xwW-HJ-GY2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5fe-Bc-PNS" secondAttribute="trailing" constant="5" id="yRn-lu-oWQ"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="conditionLabel" destination="Tvk-x9-q7J" id="orm-vo-Wsz"/>
                         <outlet property="counteryLabel" destination="rPc-8e-Jgm" id="xrF-RW-OKN"/>
+                        <outlet property="dataLabel" destination="5fe-Bc-PNS" id="VTN-io-i7a"/>
                         <outlet property="imageView" destination="quO-n7-NcE" id="STI-sT-Tf9"/>
+                        <outlet property="mapView" destination="4mu-lE-Cyl" id="Fzi-EG-cdY"/>
                         <outlet property="tempLabel" destination="g2T-ee-iUS" id="Yar-fB-kFg"/>
                         <outlet property="textField" destination="s1X-sD-8hm" id="uuP-nl-svn"/>
+                        <outlet property="uiViewMaps" destination="XPP-4a-lij" id="pzy-Sb-Xmh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
